--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="navigation">
     <div class="menuBar" style="float:left; padding: 5px 10px; cursor: pointer;">
-      <i class="fa fa-bars"></i> List
+      <i class="fa fa-bars"></i>
     </div>
     <span class="brand"><img src="images/nekobito.png" style="width: 15px; margin-right:3px; margin-top: -3px;">Nekobito - A Markown Text Editor on Browser</span>
   </div>
