--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </div>
   <div class="navigation">
     <span class="brand"><img src="images/nekobito.png" style="width: 15px; margin-right:3px; margin-top: -3px;">Nekobito - A Markown Text Editor on Browser</span>
+    <iframe src="http://ghbtns.com/github-btn.html?user=gaaamii&repo=nekobito&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" style="width:100px; height: 20px; top: 10px; position: absolute;"></iframe>
   </div>
   <div id="main" class="row">
     <div class="col-sm-5 editor-wrapper">
