change the btn to ntkme/github-buttons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   </div>
   <div class="navigation">
     <span class="brand"><img src="images/nekobito.png" style="width: 15px; margin-right:3px; margin-top: -3px;">Nekobito - A Markown Text Editor on Browser</span>
-    <iframe src="http://ghbtns.com/github-btn.html?user=gaaamii&repo=nekobito&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" style="width:100px; height: 20px; top: 10px; position: absolute;"></iframe>
+    <span style="position: absolute; top: 10px;">
+      <a href="https://github.com/ntkme/github-buttons" class="github-button" data-icon="octicon-mark-github" data-count-href="/ntkme/github-buttons/stargazers" data-count-api="/repos/gaaamii/nekobito#stargazers_count">Star</a>
+    </span>
+    <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
   </div>
   <div id="main" class="row">
     <div class="col-sm-5 editor-wrapper">
