--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="navigation">
     <span class="brand"><img src="images/nekobito.png" style="width: 15px; margin-right:3px; margin-top: -3px;">Nekobito - A Markown Text Editor on Browser</span>
     <span style="position: absolute; top: 10px;">
-      <a href="https://github.com/ntkme/github-buttons" class="github-button" data-icon="octicon-mark-github" data-count-href="/ntkme/github-buttons/stargazers" data-count-api="/repos/gaaamii/nekobito#stargazers_count">Star</a>
+      <a href="https://github.com/gaaamii/nekobito" class="github-button" data-icon="octicon-mark-github" data-count-href="/gaaamii/nekobito/stargazers" data-count-api="/repos/gaaamii/nekobito#stargazers_count">Star</a>
     </span>
     <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
   </div>
