--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Nekobito is a Markdown text editor which enables you to write more comfortably.">
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <title>Nekobito - Markdown Editor on Browser</title>
   <link rel="stylesheet" href="stylesheets/bootstrap.min.css" />
   <link rel="stylesheet" href="stylesheets/font-awesome.min.css" />
