add tabindex attribute

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div class="col-sm-5 editor-wrapper">
       <div id="editor">
         <form>
-          <input type="text" id="title" placeholder="Title" autofocus>
-          <textarea id="body" placeholder="# Markdown text here."></textarea>
+          <input type="text" id="title" placeholder="Title" autofocus tabindex="1">
+          <textarea id="body" placeholder="# Markdown text here." tabindex="2"></textarea>
         </form>
       </div>
       <div id="notice" style="display: none;">
