--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="shortcut icon" href="images/favicon.ico">
 </head>
 <body>
-  <div class="menuBar" style="float:left; padding: 5px 10px; cursor: pointer;">
+  <div class="menuBar">
     <i class="fa fa-bars"></i>
   </div>
   <div class="navigation">
